blueprint/Nginx/nginx-ldap/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: nginx-ldap
spec:
  type: ClusterIP
  selector:
    app: nginx-ldap
  ports:
    - name: https
      port: 443
      protocol: TCP
      targetPort: 9000
